--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: amazon-linux
+    runs-on: ubuntu-latest
     environment:
       name: ${{ github.ref == 'refs/heads/staging' && 'staging' || 'production' }}
 
